testdata/commands/lint/configuration/wrong-configuration.json
{
  "apiVersion": "chainsaw.kyverno.io/v1alpha2",
  "kind": "Configurations",
  "metadata": {
    "name": "valid",
    "namespace": "kyverno"
  },
  "spec": {
    "timeouts": {
      "apply": "5s",
      "assert": "10s",
      "error": "10s",
      "delete": "5s",
      "cleanup": "5s",
      "exec": "10s"
    },
    "skipDelete": true,
    "failFast": true,
    "parallel": 5,
    "reportFormat": "JSON",
    "reportName": "custom-chainsaw-report",
    "namespace": "test-namespace",
    "fullName": true,
    "includeTestRegex": "^include-.*",
    "excludeTestRegex": "^exclude-.*"
  }
}
